--- a/cv-generator-app/requirements.txt
+++ b/cv-generator-app/requirements.txt
@@ -2,7 +2,8 @@ beautifulsoup4==4.12.3
 extra_streamlit_components==0.1.71
 nltk==3.9.1
 openai==1.52.2
-pypdf==5.0.1
+pyhtml2pdf==0.0.7
+pypdf==5.1.0
 selenium==4.25.0
 streamlit==1.39.0
 streamlit_pdf_viewer==0.0.18
